update issue template
- add 16K model series
- add dependency check on sentencepiece and bitsandbytes

--- a/.github/ISSUE_TEMPLATE/ISSUE_TEMPLATE_EN.yml
+++ b/.github/ISSUE_TEMPLATE/ISSUE_TEMPLATE_EN.yml
@@ -36,10 +36,11 @@ body:
       label: Base Model
       description: Please provide the type of base model. For issues related to multiple models, please select the most appropriate one and specify all models in the main text.
       options:
-        - LLaMA-2-7B
-        - LLaMA-2-13B
-        - Alpaca-2-7B
-        - Alpaca-2-13B
+        - Chinese-LLaMA-2 (7B/13B)
+        - Chinese-Alpaca-2 (7B/13B)
+        - Chinese-LLaMA-2-16K (7B/13B)
+        - Chinese-Alpaca-2-16K (7B/13B)
+        - Others
   - type: dropdown
     id: operating-system
     attributes:
@@ -62,7 +63,7 @@ body:
     id: dependencies
     attributes:
       label: Dependencies (must be provided for code-related issues)
-      description: Please provide the versions of common dependencies such as transformers, peft, torch, etc. Use `pip list | grep -E 'transformers|peft|torch'`
+      description: Please provide the versions of common dependencies such as transformers, peft, torch, etc. Use `pip list | grep -E 'transformers|peft|torch|sentencepiece|bitsandbytes'`
       value: |
         ```
         # Please copy-and-paste your dependencies here.
