--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
+peft>=0.3.0
 torch==2.0.1
-git+https://github.com/huggingface/peft.git@13e53fc
 transformers==4.31.0
 sentencepiece==0.1.97
 bitsandbytes==0.41.0
